# amdgpudriver

./: .gitmodules  AMD_ROCM_架构分析.md
clr/: .clang-format  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  README-doc.md  README.md
clr/.azuredevops/: rocm-ci.yml
clr/.github/: palamida.yml  pull_request_template.md
clr/.github/hooks/: clang-format-check.sh  pre-commit
clr/.github/scripts/: validate_pr_description.py
clr/.github/workflows/: ai_codeql_fix.yaml  ai_codeql_historical.yml  clang-format.yml  keyword-check.yml  kws-caller.yml  pr-title-validate.yml  rocm-ci-caller.yml  validate-pr-description.yml
clr/hipamd/: CMakeLists.txt  hip-config-amd.cmake.in  hip-config-nvidia.cmake.in  hip-config.cmake.in
clr/hipamd/include/hip/amd_detail/: hip_api_trace.hpp  hip_prof_str.h
clr/hipamd/packaging/: CMakeLists.txt
clr/hipamd/src/: CMakeLists.txt  amd_hsa_elf.hpp  amdhip.def  hip_api_trace.cpp  hip_code_object.cpp  hip_code_object.hpp  hip_comgr_helper.cpp  hip_comgr_helper.hpp  hip_context.cpp  hip_conversions.hpp  hip_device.cpp  hip_device_runtime.cpp  hip_error.cpp  hip_event.cpp  hip_event.hpp  hip_event_ipc.cpp  hip_fatbin.cpp  hip_fatbin.hpp  hip_formatting.hpp  hip_gl.cpp  hip_global.cpp  hip_global.hpp  hip_graph.cpp  hip_graph_capture.hpp  hip_graph_helper.hpp  hip_graph_internal.cpp  hip_graph_internal.hpp  hip_hcc.map.in  hip_hcc.rc  hip_hcc_in.rc.in  hip_hmm.cpp  hip_internal.hpp  hip_library.cpp  hip_library.hpp  hip_memory.cpp  hip_mempool.cpp  hip_mempool_impl.cpp  hip_mempool_impl.hpp  hip_module.cpp  hip_peer.cpp  (+16 more)
clr/hipamd/src/hiprtc/: CMakeLists.txt  hiprtc.cpp  hiprtcInternal.cpp  hiprtcInternal.hpp
clr/hipamd/src/hiprtc/cmake/: hiprtc-config.cmake.in
clr/opencl/: CMakeLists.txt
clr/opencl/amdocl/: CMakeLists.txt  amdocl.rc  amdocl.rc.in  cl_command.cpp  cl_common.hpp  cl_context.cpp  cl_d3d10.cpp  cl_d3d10_amd.hpp  cl_d3d11.cpp  cl_d3d11_amd.hpp  cl_d3d9.cpp  cl_d3d9_amd.hpp  cl_device.cpp  cl_event.cpp  cl_execute.cpp  cl_gl.cpp  cl_icd.cpp  cl_icd_amd.h  cl_kernel.h  cl_memobj.cpp  cl_p2p_amd.cpp  cl_p2p_amd.h  cl_pipe.cpp  cl_profile_amd.cpp  cl_profile_amd.h  cl_program.cpp  cl_runtime.cpp  cl_sampler.cpp  cl_sdi_amd.cpp  cl_svm.cpp  cl_thread_trace_amd.cpp  glibc_functions.cpp
clr/opencl/khronos/headers/EGL/: egl.h  eglext.h  eglplatform.h
clr/opencl/khronos/headers/GL/: glext.h
clr/opencl/khronos/headers/KHR/: khrplatform.h
clr/opencl/khronos/icd/: CMakeLists.txt
clr/opencl/khronos/icd/loader/: icd.c  icd.h  icd_dispatch.c  icd_dispatch.h  icd_envvars.h  icd_platform.h
clr/opencl/packaging/: CMakeLists.txt  rocm-ocl-icd.postinst  rocm-opencl.conf  rocm-opencl.postinst  rocm-opencl.postrm  rocm-opencl.rpm_post  rocm-opencl.rpm_postun
clr/opencl/tests/ocltst/: CMakeLists.txt
clr/opencl/tests/ocltst/env/: Timer.cpp  (+12 more)
clr/opencl/tools/clinfo/: clinfo.cpp
clr/opencl/tools/cltrace/: cltrace.cpp
clr/rocclr/: CMakeLists.txt
clr/rocclr/cmake/: FindAMD_PAL_LIB.cmake  ROCclr.cmake  ROCclrHSA.cmake  ROCclrLC.cmake  ROCclrPAL.cmake
clr/rocclr/device/: appprofile.cpp  appprofile.hpp  blit.cpp  blit.hpp  blitcl.cpp  comgrctx.cpp  comgrctx.hpp  devhcmessages.cpp  devhcmessages.hpp  devhcprintf.cpp  devhostcall.cpp  devhostcall.hpp  device.cpp  device.hpp  devkernel.cpp  devkernel.hpp  devprogram.cpp  devprogram.hpp  devsanitizer.hpp  devsignal.hpp  devurilocator.hpp  hsailctx.cpp  hsailctx.hpp
clr/rocclr/device/pal/: DxxOpenCLInteropExt.h  palblit.cpp  palblit.hpp  palblitcl.cpp  palcapturemgr.hpp  palconstbuf.hpp  palcounters.cpp  palcounters.hpp  paldevice.cpp  paldevice.hpp  paldeviced3d9.cpp  paldevicegl.cpp  palgpuopen.cpp  palgpuopen.hpp  palkernel.cpp  palkernel.hpp  palmemory.cpp  palmemory.hpp  palprintf.cpp  palprintf.hpp  palprogram.cpp  palresource.cpp  palresource.hpp  palsettings.cpp  palsettings.hpp  palsignal.cpp  palsignal.hpp  palthreadtrace.hpp  paltimestamp.cpp  palubercapturemgr.cpp  palubercapturemgr.hpp  palvirtual.cpp  palvirtual.hpp
clr/rocclr/device/rocm/: mesa_glinterop.h  rocappprofile.cpp  rocappprofile.hpp  rocblit.cpp  rocblit.hpp  rocblitcl.cpp  roccounters.cpp  roccounters.hpp  rocdefs.hpp  rocdevice.cpp  rocdevice.hpp  rocglinterop.cpp  rocglinterop.hpp  rockernel.cpp  rockernel.hpp  rocmemory.cpp  rocmemory.hpp  rocprintf.cpp  rocprintf.hpp  rocprogram.cpp  rocprogram.hpp  rocrctx.cpp  rocrctx.hpp  rocregisters.hpp  rocsched.hpp  rocsettings.cpp  rocsettings.hpp  rocsignal.cpp  rocsignal.hpp  rocurilocator.cpp  rocurilocator.hpp  rocvirtual.cpp  rocvirtual.hpp
clr/rocclr/elf/: elf.cpp  elf.hpp
clr/rocclr/elf/elfio/: elf_types.hpp  elfio.hpp  elfio_dump.hpp  elfio_dynamic.hpp  elfio_header.hpp  elfio_note.hpp  elfio_relocation.hpp  elfio_section.hpp  elfio_segment.hpp  elfio_strings.hpp  elfio_symbols.hpp  elfio_utils.hpp
clr/rocclr/elf/test/: CMakeLists.txt  main.cpp
clr/rocclr/include/: top.hpp  vdi_agent_amd.h  vdi_common.hpp
clr/rocclr/include/GL/: gl_interop.h  glx.h  glxext.h
clr/rocclr/os/: os.cpp  os.hpp  os_posix.cpp  os_win32.cpp
clr/rocclr/platform/: activity.cpp  activity.hpp  agent.cpp  command.cpp  command.hpp  command_utils.hpp  commandqueue.cpp  commandqueue.hpp  context.cpp  context.hpp  counter.hpp  external_memory.hpp  gl_functions.hpp  interop_d3d10.hpp  interop_d3d11.cpp  interop_d3d11.hpp  interop_d3d9.cpp  interop_d3d9.hpp  interop_gl.cpp  interop_gl.hpp  kernel.cpp  kernel.hpp  kernel_init.hpp  memory.cpp  memory.hpp  ndrange.hpp  object.hpp  perfctr.hpp  prof_protocol.h  program.cpp  program.hpp  runtime.cpp  runtime.hpp  sampler.hpp  threadtrace.hpp  vmheap.cpp  vmheap.hpp
clr/rocclr/thread/: monitor.hpp  thread.cpp  thread.hpp
clr/rocclr/utils/: debug.cpp  debug.hpp  flags.cpp  flags.hpp  util.hpp
rocr-runtime/libhsakmt/src/virtio/: CMakeLists.txt  hsakmt_virtio_amdgpu.c  hsakmt_virtio_device.c  hsakmt_virtio_device.h  hsakmt_virtio_events.c  hsakmt_virtio_memory.c  hsakmt_virtio_openclose.c  hsakmt_virtio_proto.h  hsakmt_virtio_queues.c  hsakmt_virtio_topology.c  hsakmt_virtio_vm.c  libhsakmt_virtio.ver  virtio_gpu.c  virtio_gpu.h
(+1204 files in other folders)
